--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "filesac",
-  "version": "10.0.1",
+  "version": "10.0.2",
   "description": "File utility functions",
   "main": "files.js",
   "scripts": {
     "test": "echo see tests"
   },
   "files": [
-    "fles.js",
-    "readme.js",
+    "files.js",
+    "readme.me",
     "changelog.md",
     "license.txt"
   ],
