--- a/package.json
+++ b/package.json
@@ -2,29 +2,29 @@
 	"name": "filesac",
 	"version": "12.0.0",
 	"description": "File utility functions",
-    "license": "CC0-1.0",
-    "type": "module",
+	"license": "CC0-1.0",
+	"type": "module",
 	"main": "files.js",
 	"scripts": {
-		"test": "node --experimental-modules tests/files-test.js",
+		"test": "node tests/files-test.js",
 		"lint-fix": "eslint --ignore-path .gitignore --fix files.js",
 		"lint": "eslint --ignore-path .gitignore files.js"
 	},
 	"devDependencies": {
-		"eslint": "^6.5.1",
-		"eslint-config-red": "^1.4.1"
+		"eslint": "^7.14.0",
+		"eslint-config-red": "^1.8.1"
 	},
 	"eslintConfig": {
 		"extends": [
 			"red"
 		],
 		"parserOptions": {
-			"ecmaVersion": 2020,
+			"ecmaVersion": 2021,
 			"sourceType": "module"
 		},
 		"env": {
 			"node": true,
-			"es6": true
+			"es2021": true
 		}
 	},
 	"files": [
@@ -39,6 +39,13 @@
 	},
 	"keywords": [
 		"utility",
-		"file"
+		"file",
+		"promise",
+		"copy",
+		"directory",
+		"file",
+		"write",
+		"read",
+		"concatenate"
 	]
 }
